fix some sonar cloud complains again