@@ -1,6 +1,6 @@
 package de.neuefische.backend.repository;
 
-import de.neuefische.backend.model.Movie;
+
 import de.neuefische.backend.model.MovieDBResponse;
 import de.neuefische.backend.model.MovieDTO;
 import lombok.NoArgsConstructor;
@@ -8,11 +8,11 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Repository;
 import org.springframework.web.reactive.function.client.WebClient;
 
-import java.util.HashMap;
+
 import java.util.List;
-import java.util.Map;
+
 import java.util.Objects;
-import java.util.stream.Collectors;
+
 
 @Repository
 @NoArgsConstructor
@@ -38,7 +38,7 @@ public class MovieRepository {
         return response.results()
                 .stream()
                 .map(movie -> new MovieDTO(movie.id(), movie.titleText().text()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
